added few lines of code

--- a/views/jumbo.ejs
+++ b/views/jumbo.ejs
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    p {
+        color: brown;
+        font-size: 40px;
+        text-transform: capitalize;
+    }
+
+    .mose {
+        margin: 80px;
+        padding: 20px;
+        height: 400px;
+        width: 900px;
+        color: white;
+        background-color: black;
+        box-shadow: 2px 2px solid pink;
+        box-sizing: border-box;
+        border-radius: 20px;
+        align-content: center;
+        align-items: center;
+        justify-content: center;
+
+    }
+</style>
+
 <body>
-    <div>
+    <div class="mose">
+        <h1>Dear one as you move on in life i like you to note this:</h1> <br><br><br>
         <p>
-            hello <%=quotes%>
-           
+            <%=quotes%>
+
         </p>
     </div>
 </body>
+
 </html>
